--- a/index.html
+++ b/index.html
@@ -12,7 +12,50 @@
 
 <body>
     <div class="container">
-        <ul class="draggable__list" id="draggableList"></ul>
+        <ul class="list__items" id="draggableList">
+            <li class="list__item">
+                <div draggable="true" class="draggable">
+                    <label class="input__label">Input</label>
+                    <input hidden type="value" class="__input" />
+                    <span class="now">Now Value is 👉 </span>
+                </div>
+            </li>
+            <li class="list__item">
+                <div draggable="true" class="draggable">
+                    <label class="input__label">Input</label>
+                    <input hidden type="value" class="__input" />
+                    <span class="now">Now Value is 👉 </span>
+                </div>
+            </li>
+            <li class="list__item">
+                <div draggable="true" class="draggable" data-normal>
+                    <label class="input__label">Input</label>
+                    <input hidden type="value" class="__input" />
+                    <span class="now">Now Value is 👉 </span>
+                </div>
+            </li>
+            <li class="list__item">
+                <div draggable="true" class="draggable">
+                    <label class="input__label">Input</label>
+                    <input hidden type="value" class="__input" />
+                    <span class="now">Now Value is 👉 </span>
+                </div>
+            </li>
+            <li class="list__item">
+                <div draggable="true" class="draggable">
+                    <label class="input__label">Input</label>
+                    <input hidden type="value" class="__input" />
+                    <span class="now">Now Value is 👉 </span>
+                </div>
+            </li>
+            <li class="list__item">
+                <div draggable="true" class="draggable">
+                    <label class="input__label">Input</label>
+                    <input hidden type="value" class="__input" />
+                    <span class="now">Now Value is 👉 </span>
+                </div>
+            </li>
+        </ul>
         <button class="btn" id="restBtn">Reset Default</button>
     </div>
 
